Prevent task stat meters from wrapping
Icons and meters were appearing on separate lines in Firefox.

--- a/app/files/css/task_stats.scss
+++ b/app/files/css/task_stats.scss
@@ -1,5 +1,6 @@
 .task-stats {
   margin-top: 0.8em;
+  white-space: nowrap;
 }
 
 .task-stats .usage {
